backend initially working
 Please enter the commit message for your changes. Lines starting

--- a/templates/home.html
+++ b/templates/home.html
@@ -1,9 +1,15 @@
 <!DOCTYPE html>
 <html>
   <body>
+    <p>
+      {quip}
+    </p>
+
     <form method="POST" action="/">
       <input type="text" name="quip">
       <input type="submit" value="Add">
     </form>
+
+
   </body>
 </html>
